Refactor application:
Add proper method names and names in html pages
Use builder
Refactor logging
Rename method insertItem to addItem
Use StringUtils.isBlank